--- a/styles/argon-design-system-react.css
+++ b/styles/argon-design-system-react.css
@@ -21,7 +21,7 @@
 }
 
 #nav-title {
-	font-family: Augestina;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 	text-transform: capitalize;
 }
 
